--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,38 @@
-version: "3"
-
-networks:
- kong-net:
-  driver: bridge
-
 services:
-
-  kong-database:
+  postgres:
     image: postgres:9.6
     restart: always
-    networks:
-      - kong-net
     environment:
-      POSTGRES_USER: kong
-      POSTGRES_DB: kong
+      POSTGRES_USER: konga
+      POSTGRES_DB: konga
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - "5432:5432"
+      - 5432:5432
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "kong"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      test: ["CMD", "pg_isready", "-U", "konga"]
+      interval: 1s
+      timeout: 1s
+      retries: 3
 
-  konga-prepare:
-    image: pantsel/konga:next
-    command: "-c prepare -a postgres -u postgresql://kong@kong-database:5432/konga_db"
-    networks:
-      - kong-net
+  migration:
+    image: pantsel/konga:latest
+    command: "-c prepare -a postgres -u postgresql://konga@postgres:5432/konga"
     restart: on-failure
-    links:
-      - kong-database
     depends_on:
-      - kong-database
+      postgres:
+        condition: service_healthy
 
   konga:
     image: pantsel/konga:latest
     restart: always
-    networks:
-        - kong-net
     environment:
       DB_ADAPTER: postgres
-      DB_HOST: kong-database #10.100.2.49
-      DB_USER: kong 
-      TOKEN_SECRET: km1GUr4RkcQD7DewhJPNXrCuZwcKmqjb
-      DB_DATABASE: konga_db
+      DB_HOST: postgres
+      DB_USER: konga
+      DB_DATABASE: konga
       NODE_ENV: production
-    depends_on:
-      - kong-database
     ports:
-      - "1337:1337"
+      - 0.0.0.0:80:1337
+    depends_on:
+      postgres:
+        condition: service_healthy
